force-app/main/default/objects/Universal_App_Section__mdt/Universal_App_Section__mdt.object-meta.xml
<CustomObject>
    <label>Universal App Section</label>
    <pluralLabel>Universal App Sections</pluralLabel>
</CustomObject>