force-app/main/default/objects/Universal_App_Section__mdt/fields/AddChildButtonLabel__c.field-meta.xml
<CustomField>
    <fullName>AddChildButtonLabel__c</fullName>
    <label>Add Child Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>