force-app/main/default/objects/Universal_App_Section__mdt/fields/ChildFieldSet__c.field-meta.xml
<CustomField>
    <fullName>ChildFieldSet__c</fullName>
    <inlineHelpText>API name of Field Set on Child object. Limit the field set to 5 fields.</inlineHelpText>
    <label>Child Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>