force-app/main/default/objects/Universal_App_Section__mdt/fields/ChildObject__c.field-meta.xml
<CustomField>
    <fullName>ChildObject__c</fullName>
    <inlineHelpText>API Name of Child object</inlineHelpText>
    <label>Child Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>