force-app/main/default/objects/Universal_App_Section__mdt/fields/ChildObjectRecordLimit__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectRecordLimit__c</fullName>
    <inlineHelpText>If set, the Add button will be disabled once this number of rows has been added.</inlineHelpText>
    <label>Child Object Record Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>