force-app/main/default/objects/Universal_App_Section__mdt/fields/ChildTableTitle__c.field-meta.xml
<CustomField>
    <fullName>ChildTableTitle__c</fullName>
    <label>Child Table Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>