force-app/main/default/objects/Universal_App_Section__mdt/fields/conditionalRender__c.field-meta.xml
<CustomField>
    <fullName>conditionalRender__c</fullName>
    <inlineHelpText>JSON object example, keys are required:
{ 
    &quot;Fields&quot;: [
        {
         &quot;controllingField&quot;: &quot;Field that controls the rendering of another section&quot;,
         &quot;controllingValue&quot;: &quot;Value that controls the rendering of another section&quot;,
         &quot;actionSections&quot;: [ &quot;List of Universal App Sections (api names)&quot; ]
        }
    ]
}</inlineHelpText>
    <label>Conditional Render</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>