force-app/main/default/objects/Universal_App_Section__mdt/fields/DisplayByDefault__c.field-meta.xml
<CustomField>
    <fullName>DisplayByDefault__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display by Default</label>
    <type>Checkbox</type>
</CustomField>