force-app/main/default/objects/Universal_App_Section__mdt/fields/isEnableChildRecords__c.field-meta.xml
<CustomField>
    <fullName>isEnableChildRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If enabled, adds a button for adding new child records. Button Label, Child Object, and Field Set are required if enabled.</inlineHelpText>
    <label>Enable Child Records</label>
    <type>Checkbox</type>
</CustomField>