force-app/main/default/objects/Universal_App_Section__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Determines where in the page (vertical stack descending) this section will appear.</description>
    <inlineHelpText>Determines where in the page (vertical stack descending) this section will appear.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>