force-app/main/default/objects/Universal_App_Section__mdt/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <description>Determines which page of the Universal App this section will appear on.</description>
    <inlineHelpText>Determines which page of the Universal App this section will appear on.</inlineHelpText>
    <label>Page</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>