force-app/main/default/objects/Universal_App_Section__mdt/fields/ParentField__c.field-meta.xml
<CustomField>
    <fullName>ParentField__c</fullName>
    <inlineHelpText>Relationship Field on the Child object that points to the parent record</inlineHelpText>
    <label>Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>