force-app/main/default/objects/Universal_App_Section__mdt/fields/Section_Body__c.field-meta.xml
<CustomField>
    <fullName>Section_Body__c</fullName>
    <description>See LWC Developer Guide for supported HTML tags, under lightning-formatted-rich-text. Auto-links URLs and emails.</description>
    <inlineHelpText>Text displayed under the header (formatted rich text), supporting the following HTML tags: a, b, br, code, div, em, h1, img, li, table, ul, etc.</inlineHelpText>
    <label>Section Body</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>