force-app/main/default/objects/Universal_App_Section__mdt/fields/Section_Field_Columns__c.field-meta.xml
<CustomField>
    <fullName>Section_Field_Columns__c</fullName>
    <defaultValue>&quot;2&quot;</defaultValue>
    <inlineHelpText>Number of columns to display in the section.</inlineHelpText>
    <label>Section Field Columns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>