force-app/main/default/objects/Universal_App_Section__mdt/fields/Section_Field_Flow__c.field-meta.xml
<CustomField>
    <fullName>Section_Field_Flow__c</fullName>
    <inlineHelpText>Determines the order in which field set fields display (from left to right in rows, or top down in columns).</inlineHelpText>
    <label>Section Field Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left Right</fullName>
                <default>true</default>
                <label>Left Right</label>
            </value>
            <value>
                <fullName>Top Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>