force-app/main/default/objects/Universal_App_Section__mdt/fields/Section_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Section_Field_Set__c</fullName>
    <description>API developer name of the Universal App Object&apos;s field set.</description>
    <inlineHelpText>Field set API name can be found in the &quot;Field Sets&quot; section of the specified Object in &quot;Object Manager&quot; under &quot;Setup&quot;.</inlineHelpText>
    <label>Section Field Set</label>
    <length>80</length>
    <type>Text</type>
</CustomField>