force-app/main/default/objects/Universal_App_Section__mdt/fields/Section_Header__c.field-meta.xml
<CustomField>
    <fullName>Section_Header__c</fullName>
    <label>Section Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>