force-app/main/default/objects/Universal_App_Section__mdt/fields/Universal_App__c.field-meta.xml
<CustomField>
    <fullName>Universal_App__c</fullName>
    <label>Universal App</label>
    <referenceTo>Universal_App__mdt</referenceTo>
    <relationshipLabel>Universal App Sections</relationshipLabel>
    <relationshipName>Universal_App_Sections</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>