force-app/main/default/objects/Universal_App_Section__mdt/validationRules/Define_Field_Set_Columns.validationRule-meta.xml
<ValidationRule>
    <fullName>Define_Field_Set_Columns</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Section_Field_Set__c)),
  ISPICKVAL(Section_Field_Columns__c,&apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Section_Field_Columns__c</errorDisplayField>
    <errorMessage>Please define the number of columns for the field set.</errorMessage>
</ValidationRule>