force-app/main/default/objects/Universal_App_Section__mdt/validationRules/Define_Field_Set_Flow.validationRule-meta.xml
<ValidationRule>
    <fullName>Define_Field_Set_Flow</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Section_Field_Set__c)),
  NOT(ISPICKVAL(Section_Field_Columns__c, &apos;1&apos;)),
  ISPICKVAL(Section_Field_Flow__c, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Section_Field_Flow__c</errorDisplayField>
    <errorMessage>Please select a directional flow for the field display.</errorMessage>
</ValidationRule>