force-app/main/default/objects/Universal_App_Section__mdt/listViews/Scholarship_Application.listView-meta.xml
<ListView>
    <fullName>Scholarship_Application</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Page__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Universal_App__c</field>
        <operation>equals</operation>
        <value>Scholarship_Application</value>
    </filters>
    <label>Scholarship Application</label>
    <language>en_US</language>
</ListView>